<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- I picked a linearLayout with vertical orientation because
    all the elements are in row vertically (simple layout)
     -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".instructions.InstructionsFragment">


        <TextView
            android:id="@+id/textInstructions1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_margin"
            android:text="@string/instructions_text1" />

        <TextView
            android:id="@+id/textInstructions2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_margin"
            android:text="@string/instructions_text2" />

        <Button
            android:id="@+id/buttonShoeList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/min_margin"
            android:text="@string/shoe_list"
            style="@style/main_button"
            />

    </LinearLayout>
</layout>